# producer-player

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json
.githooks/: pre-push
.github/: RELEASE_NOTES_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release-desktop.yml
Sources/ProducerPlayer/Services/: MatchingEngine.swift  NotificationService.swift
Sources/ProducerPlayer/Views/: ContentView.swift  SongListView.swift  WaveformView.swift
apps/e2e/: package.json  playwright.config.ts  tsconfig.json
apps/e2e/scripts/: run-ci.mjs
apps/e2e/src/: agent-chat-drag-resize.spec.ts  agent-chat-panel.spec.ts  agent-streaming.spec.ts  (+48 more)
apps/electron/: package.json  tsconfig.json
apps/renderer/: index.html  package.json  tsconfig.json  vite.config.ts
artifacts/: linux-hardening-20260428.md
artifacts/playback-code4-fix-2026-03-09/: evidence.json
assets/icon/: ProducerPlayer.icns
docs/: AGENT_MASTERING_DESIGN.md  AGENT_PANEL_DESIGN.md  AI_RECOMMENDATIONS_AND_STATE_SPLIT_PLAN.md  APP_ICON.md  APP_STORE_CONNECT_CHECKLIST.md  APP_STORE_CONNECT_METADATA_TEMPLATE.md  CODE_SIGNING.md  CROSS_PLATFORM_MIGRATION.md  E2E.md  LICENSE_STATUS.md  MAC_APP_STORE.md  MASTERING_CHECKLIST_PLAN.md  MVP_CHECKLIST.md  PLAN_LOGGING_WORKFLOW.md  PLUGIN_HOSTING_AUDIT_v3.44.md  PLUGIN_HOSTING_PLAN.md  PUBLIC_STATUS.md  REDDIT_RESEARCH_2026-03-13.md  RELEASING.md  ROADMAP.md  TEST_COVERAGE_AUDIT_2026-04-19.md  VIDEO_SCRIPT.md  help-surface-audit-2026-03-25.md
native/pp-audio-host/: .gitignore  CMakeLists.txt
native/pp-audio-host/scripts/: build-sidecar.sh
native/pp-audio-host/src/: main.cpp
old-swift-project/: Package.swift.bak
old-swift-project/docs/: ARCHITECTURE.md
scripts/: build-linux.mjs  build-mac.mjs  build-mas-local.sh  bump-version.mjs  check-latest-mac-yml.mjs  check-version-bump.mjs  check-version-consistency.mjs  create-apple-distribution-csr.sh  generate-app-icon.sh  generate-app-store-screenshots.py  generate-ordering-icon-refinements.py  install-git-hooks.mjs  mas-preflight.sh  notarize.js  plan_verbatim_audit.py  prepare-apple-distribution-p12.sh  run-pre-push-version-check.mjs  sync-version.mjs  take-screenshot.mjs  upload-mas-build.sh
scripts/audit/: help-surface-audit.mjs
site/: index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css  sw.js  version.json
video/: package-lock.json  package.json  tsconfig.json
video/src/: ProducerPlayerExplainer.tsx  Root.tsx  theme.ts
(+155 files in other folders)
